# sapling-software

./: .gitignore  README.md  main.py  test_sapling.py
Tasks/: battery_task.py  beacon_task.py  blink_task.py  gps_task.py
common/: README.md
common/sapling/: setup.cfg
common/sapling/src/sapling/: __main__.py
common/sapling/src/sapling/deploy/: __main__.py  cmdline.py
common/sapling/src/sapling/utils/: ptp.py  temporary_shit
common/src/sapling/: constants.py
common/test_circuitpy/: README.md  pyproject.toml  setup.cfg
common/test_circuitpy/src/test_circuitpy/: board.py  circuitpython_board.py
coral/:   README.md  pictureUtils.py  requirements.txt  reset.sh  settingUp.md  setup.sh
coral/docs/: board_setup.md
coral/services/: command_handler.service
coral/src/: coral_cam_internal.py  coral_camera.py  earth.py  ftp.py  main.py  pictureUtils.py  run.sh
docs/: coral.md  file_transfer.md
fsw/Tasks/: attitude_determination_task.py
fsw/lib/: pycubed.py
groundstation/: main.py  receive_image.py
groundstation/Tasks/: imu_task.py
gsw/Tasks/: blink_task.py
lib/: adafruit_gps.py  adm1176.py  bmx160.py  pycubed.py
pycubed/: cdh.py  eps.py  pyproject.toml  sapling.py
pycubed/Tasks/: beacon_task.py  light_sensor_task.py
pycubed/circuitpython/: build.md  pins.c
pycubed/circuitpython/binaries/: pycubed.5.ssi.2._j19_mram_cp7.3.0.uf2
pycubed/hardware/: adcs.py  comms.py  eps.py  gnss.py  gps.py  neopixel.py  payloads.py  storage.py  wdt.py
pycubed/hardware/adcs/: adcs.py  imu.py  magnetorquer.py  sun_sensor.py
pycubed/hardware/comms/: comms.py  dipole_antenna.py  uhf_radio.py
pycubed/hardware/eps/: battery_board.py  eps.py  solar_panel.py  (+1 more)
pycubed/lib/: coral.py  file_utils.py  ftp.md  ftp.py  opt3001.py  pycubed.py
pycubed/lib_sim/: opt3001.py
pycubed/src/: cdh.py  main.py  telemetry.py
pycubed/tests/: README.md  board.json  circuitpython_board.py  conftest.py  entry_point.py  requirements.txt  runner.py  test_circuitpython.py  test_pycubed.py
scripts/: .gitignore  get_file.py  get_file_pycubed_side.py
(+78 files in other folders)
