[metadata]
name = sapling-common
version = 0.0.1
author = Flynn Dreilinger
author_email = flynnd@stanford.edu
description = a collection of utilities for Sapling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanford-ssi/sapling-software
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src