[metadata]
name = test-circuitpy
version = 0.0.1
author = Flynn Dreilinger
author_email = flynnd@stanford.edu
description = a collection of utilities for connecting to and testing CircuitPython boards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanford-ssi/sapling-software
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    pyserial_asyncio
    adafruit_board_toolkit 

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src